adjust deployed code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,15 +5,16 @@
 server.port=8080
 default-character-set=utf8_bin
 
-## spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.driverClassName=org.postgresql.Driver
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.datasource.url=DATASOURCE_URL
-spring.datasource.username=DATASOURCE_USERNAME
-spring.datasource.password=DATASOURCE_PASSWORD
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration &amp; DataSourceProperties)
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #Warning Lazy Init Error happen (default = true) affect performance
@@ -25,13 +26,13 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 #redis.pass=
 # keys *
 # redis-cli flushall (reset DB)
-redis.host=REDIS_HOST
-redis.port=REDIS_PORT
-redis.pass=REDIS_PASS
+redis.host=${REDIS_HOST}
+redis.port=${REDIS_PORT}
+redis.pass=${REDIS_PASS}
 ### Error
 server.error.path=/error
 ## Token
-jwt.secret=JWT_SECRET
+jwt.secret=${JWT_SECRET}
 jwt.expirationDateInMs=60000
 jwt.refreshExpirationDateInMs=9000000
 
@@ -39,4 +40,4 @@ logging.level.root=warn
 logging.level.org.springframework.web=debug
 logging.level.org.hibernate=error
 
-SMS_ACCESS_TOKEN=SMS_ACCESS_TOKEN
+SMS_ACCESS_TOKEN=${SMS_ACCESS_TOKEN}
