--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,23 @@
-#spring.datasource.url=DATASOURCE_URL
-#spring.datasource.username=DATASOURCE_USERNAME
-#spring.datasource.password=DATASOURCE_PASSWORD
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-server.port=8080
-default-character-set=utf8_bin
-
-spring.datasource.driverClassName=org.postgresql.Driver
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+
+### MySQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+server.port=8080
+default-character-set=utf8_bin
+
+### Postgres
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration &amp; DataSourceProperties)
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
 #Warning Lazy Init Error happen (default = true) affect performance
 spring.jpa.open-in-view=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
@@ -41,3 +42,8 @@ logging.level.org.springframework.web=debug
 logging.level.org.hibernate=error
 
 SMS_ACCESS_TOKEN=${SMS_ACCESS_TOKEN}
+
+### Elastic search ###
+elasticsearch.clustername = stackjava-cluster
+elasticsearch.host = localhost
+elasticsearch.port = 9300
