add crud Experience, format code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,11 @@ spring.datasource.password=${DATASOURCE_PASSWORD}
 server.port=8080
 default-character-set=utf8_bin
 ### MySQL
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 ### Postgres
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
-
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
 ## Spring DATASOURCE (DataSourceAutoConfiguration &amp; DataSourceProperties)
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
@@ -36,14 +33,11 @@ server.error.path=/error
 jwt.secret=${JWT_SECRET}
 jwt.expirationDateInMs=60000
 jwt.refreshExpirationDateInMs=9000000
-
 logging.level.root=warn
 logging.level.org.springframework.web=debug
 logging.level.org.hibernate=error
-
 SMS_ACCESS_TOKEN=${SMS_ACCESS_TOKEN}
-
 ### Elastic search ###
-elasticsearch.clustername = stackjava-cluster
-elasticsearch.host = localhost
-elasticsearch.port = 9300
+elasticsearch.clustername=stackjava-cluster
+elasticsearch.host=localhost
+elasticsearch.port=9300
