--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,32 +3,40 @@ spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
 server.port=8080
 default-character-set=utf8_bin
+
 ### MySQL
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 ### Postgres
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+
 ## Spring DATASOURCE (DataSourceAutoConfiguration &amp; DataSourceProperties)
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
+
 #Warning Lazy Init Error happen (default = true) affect performance
 spring.jpa.open-in-view=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
 ### Redis
 #redis.host=localhost
 #redis.port=6379
 #redis.pass=
 # keys *
+
 # redis-cli flushall (reset DB)
 redis.host=${REDIS_HOST}
 redis.port=${REDIS_PORT}
 redis.pass=${REDIS_PASS}
+
 ### Error
 server.error.path=/error
+
 ## Token
 jwt.secret=${JWT_SECRET}
 jwt.expirationDateInMs=60000
@@ -37,6 +45,7 @@ logging.level.root=warn
 logging.level.org.springframework.web=debug
 logging.level.org.hibernate=error
 SMS_ACCESS_TOKEN=${SMS_ACCESS_TOKEN}
+
 ### Elastic search ###
 elasticsearch.clustername=stackjava-cluster
 elasticsearch.host=localhost
