--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,12 @@ server.port=8080
 default-character-set=utf8_bin
 
 ### MySQL
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 ### Postgres
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration &amp; DataSourceProperties)
 spring.jpa.generate-ddl=true
