--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,8 +53,8 @@ elasticsearch.port=9300
 
 #http://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#common-application-properties
 #search multipart
-#spring.http.multipart.max-file-size=100MB
-#spring.http.multipart.max-request-size=100MB
+spring.http.multipart.max-file-size=-1
+spring.http.multipart.max-request-size=-1
 
-spring.servlet.multipart.max-file-size=100MB
-spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
