--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,3 +60,7 @@ spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
 
 spring.main.allow-circular-references=true
+
+#server.servlet.session.timeout=30m
+
+spring.main.allow-bean-definition-overriding=true
