--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,7 +56,6 @@ elasticsearch.port=9300
 #search multipart
 spring.http.multipart.max-file-size=-1
 spring.http.multipart.max-request-size=-1
-
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
 
@@ -65,3 +64,7 @@ spring.main.allow-circular-references=true
 #server.servlet.session.timeout=30m
 
 spring.main.allow-bean-definition-overriding=true
+
+### Timezone
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=Asia/Ho_Chi_Minh
