--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,12 @@ server.port=8080
 default-character-set=utf8_bin
 
 ### MySQL
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 ### Postgres
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration &amp; DataSourceProperties)
 spring.jpa.generate-ddl=true
@@ -68,3 +68,8 @@ spring.main.allow-bean-definition-overriding=true
 ### Timezone
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
+
+#Paypal config
+paypal.mode=sandbox
+paypal.client.app=AZNAkiAs00A7iOGYmxia3wJRodWI-fVcFM94RmEzlk_c5FvTocwcSbp1lDwsGD4IiK8aVQLfWlAoIKxO
+paypal.client.secret=EKSY8qN9fkDxW9_flRwsP83nTUzxsKukXqbwlrynEFKZJYVSTFgTPU0Qfx7VdtJ9vP-6NnTohMxyspHS
