add api get all candidate,application, position to employer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,12 @@ server.port=8080
 default-character-set=utf8_bin
 
 ### MySQL
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 ### Postgres
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration &amp; DataSourceProperties)
 spring.jpa.generate-ddl=true
@@ -48,9 +48,9 @@ logging.level.org.hibernate=error
 SMS_ACCESS_TOKEN=${SMS_ACCESS_TOKEN}
 
 ### Elastic search ###
-elasticsearch.clustername=stackjava-cluster
-elasticsearch.host=localhost
-elasticsearch.port=9300
+#elasticsearch.clustername=stackjava-cluster
+#elasticsearch.host=localhost
+#elasticsearch.port=9300
 
 #http://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#common-application-properties
 #search multipart
@@ -73,3 +73,5 @@ spring.jackson.time-zone=Asia/Ho_Chi_Minh
 paypal.mode=sandbox
 paypal.client.app=AZNAkiAs00A7iOGYmxia3wJRodWI-fVcFM94RmEzlk_c5FvTocwcSbp1lDwsGD4IiK8aVQLfWlAoIKxO
 paypal.client.secret=EKSY8qN9fkDxW9_flRwsP83nTUzxsKukXqbwlrynEFKZJYVSTFgTPU0Qfx7VdtJ9vP-6NnTohMxyspHS
+
+### Logging
