finish payment with paypal feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -74,4 +74,5 @@ paypal.mode=sandbox
 paypal.client.app=AZNAkiAs00A7iOGYmxia3wJRodWI-fVcFM94RmEzlk_c5FvTocwcSbp1lDwsGD4IiK8aVQLfWlAoIKxO
 paypal.client.secret=EKSY8qN9fkDxW9_flRwsP83nTUzxsKukXqbwlrynEFKZJYVSTFgTPU0Qfx7VdtJ9vP-6NnTohMxyspHS
 
-### Logging
+#Thymeleaf
+spring.thymeleaf.cache=false
