--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -76,3 +76,12 @@ paypal.client.secret=EKSY8qN9fkDxW9_flRwsP83nTUzxsKukXqbwlrynEFKZJYVSTFgTPU0Qfx7
 
 #Thymeleaf
 spring.thymeleaf.cache=false
+
+### Login google
+
+google.app.id=84382277177-tk0ct3n22t6pcshpjjadnbohq97rv2hv.apps.googleusercontent.com
+google.app.secret=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 
+google.redirect.uri=http://localhost:8080/login-google
+google.link.get.token=https://accounts.google.com/o/oauth2/token
+google.link.get.user_info_v3=https://www.googleapis.com/oauth2/v3/tokeninfo?id_token=
+google.link.get.user_info_v1=https://www.googleapis.com/oauth2/v1/userinfo?access_token=
