add forgot password feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,12 @@ server.port=8080
 default-character-set=utf8_bin
 
 ### MySQL
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 ### Postgres
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration &amp; DataSourceProperties)
 spring.jpa.generate-ddl=true
@@ -38,7 +38,7 @@ redis.pass=${REDIS_PASS}
 ### Error
 server.error.path=/error
 
-## Token
+## TokenEntity
 jwt.secret=${JWT_SECRET}
 jwt.expirationDateInMs=60000
 jwt.refreshExpirationDateInMs=9000000
@@ -78,10 +78,12 @@ paypal.client.secret=EKSY8qN9fkDxW9_flRwsP83nTUzxsKukXqbwlrynEFKZJYVSTFgTPU0Qfx7
 spring.thymeleaf.cache=false
 
 ### Login google
-
 google.app.id=84382277177-tk0ct3n22t6pcshpjjadnbohq97rv2hv.apps.googleusercontent.com
 google.app.secret=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 
 google.redirect.uri=http://localhost:8080/login-google
-google.link.get.token=https://accounts.google.com/o/oauth2/token
+google.link.get.tokenEntity=https://accounts.google.com/o/oauth2/tokenEntity
 google.link.get.user_info_v3=https://www.googleapis.com/oauth2/v3/tokeninfo?id_token=
 google.link.get.user_info_v1=https://www.googleapis.com/oauth2/v1/userinfo?access_token=
+
+#Support email
+support.email=caihoncuagiamnguc@gmail.com
