fix filter job post with budget

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -87,3 +87,5 @@ google.link.get.user_info_v1=https://www.googleapis.com/oauth2/v1/userinfo?acces
 
 #Support email
 support.email=caihoncuagiamnguc@gmail.com
+
+app.firebase-configuration-file=s
