--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,11 @@
             <version>1.32.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>9.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
