--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,12 @@ server.port=8080
 default-character-set=utf8_bin
 
 ### MySQL
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 ### Postgres
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration &amp; DataSourceProperties)
 spring.jpa.generate-ddl=true
@@ -19,6 +19,18 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
+
+#Connection pool
+#http://www.masterspringboot.com/configuration/web-server/configuring-tomcat-connection-pool-on-spring-boot/
+#spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
+#
+#spring.datasource.tomcat.initial-size=5
+#spring.datasource.tomcat.max-wait=20000
+#spring.datasource.tomcat.max-active=5
+#spring.datasource.tomcat.max-idle=5
+#spring.datasource.tomcat.min-idle=3
+#spring.datasource.tomcat.default-auto-commit=true
+
 
 #Warning Lazy Init Error happen (default = true) affect performance
 spring.jpa.open-in-view=true
