--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 server.port=8080
 default-character-set=utf8_bin
 
-### MySQL
+## MySQL
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 ### Postgres
@@ -56,6 +56,7 @@ jwt.expirationDateInMs=60000
 jwt.refreshExpirationDateInMs=9000000
 logging.level.root=warn
 logging.level.org.springframework.web=debug
+spring.mvc.log-request-details=true
 logging.level.org.hibernate=error
 SMS_ACCESS_TOKEN=${SMS_ACCESS_TOKEN}
 
