add api upload for blog image, re-config prefix path "api" in application.properties

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-// Copy and paste your API environment variable
+
+CLOUDINARY_URL=cloudinary://767685293235441:y_52S2MG_c0tdbULxHEv90l6mSE@drwwfkcmg;EMAIL_PASSWORD=cpcodstsupgxvfkc;JWT_SECRET=puzzle-ute;REDIS_HOST=redis-17162.c292.ap-southeast-1-1.ec2.cloud.redislabs.com;REDIS_PASS=HxpykiCPt1Y4zjZMunLQqZ2yVt1M9rk7;REDIS_PORT=17162;SMS_ACCESS_TOKEN=VLXmAh7BckpeiJUzXMu5NCrhanYPKTtw;SPRING_DATASOURCE_PASSWORD=azkaban11;SPRING_DATASOURCE_URL=jdbc:mysql://127.0.0.1:3306/puzzle_ute;SPRING_DATASOURCE_USERNAME=root
