--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,12 @@ server.port=8080
 default-character-set=utf8_bin
 
 ## MySQL
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 ### Postgres
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration &amp; DataSourceProperties)
 spring.jpa.generate-ddl=true
@@ -54,7 +54,7 @@ server.error.path=/error
 jwt.secret=${JWT_SECRET}
 jwt.expirationDateInMs=60000
 jwt.refreshExpirationDateInMs=9000000
-logging.level.root=warn
+logging.level.root=trace
 logging.level.org.springframework.web=debug
 spring.mvc.log-request-details=true
 logging.level.org.hibernate=error
@@ -101,7 +101,7 @@ google.link.get.user_info_v1=https://www.googleapis.com/oauth2/v1/userinfo?acces
 #Support email
 support.email=caihoncuagiamnguc@gmail.com
 
-app.firebase-configuration-file=s
+app.firebase-configuration-file=firebase-service-account.json
 
 #prefix
 server.servlet.contextPath=/api
