add processing for upadte blog post

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,12 @@ server.port=8080
 default-character-set=utf8_bin
 
 ## MySQL
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 ### Postgres
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration &amp; DataSourceProperties)
 spring.jpa.generate-ddl=true
@@ -32,7 +32,7 @@ spring.jpa.properties.hibernate.show_sql=true
 #spring.datasource.tomcat.default-auto-commit=true
 
 
-#Warning Lazy Init Error happen (default = true) affect performance
+#Warning Lazy Init ErrorDefine happen (default = true) affect performance
 spring.jpa.open-in-view=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
@@ -42,20 +42,23 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 #redis.pass=
 # keys *
 
+
 # redis-cli flushall (reset DB)
 redis.host=${REDIS_HOST}
 redis.port=${REDIS_PORT}
 redis.pass=${REDIS_PASS}
+#spring.data.redis.repositories.type = none
+spring.data.redis.repositories.enabled=false
 
-### Error
+### ErrorDefine
 server.error.path=/error
 
 ## TokenEntity
 jwt.secret=${JWT_SECRET}
 jwt.expirationDateInMs=60000
 jwt.refreshExpirationDateInMs=9000000
-logging.level.root=trace
-logging.level.org.springframework.web=debug
+logging.level.root=info
+logging.level.org.springframework.web=info
 spring.mvc.log-request-details=true
 logging.level.org.hibernate=error
 SMS_ACCESS_TOKEN=${SMS_ACCESS_TOKEN}
