update time zone

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -145,6 +145,18 @@ server.servlet.contextPath=/api
 springdoc.api-docs.path=/api-docs
 
 jasypt.encryptor.password=${JASYPT_PASSWORD}
+
+# Actuator
+management.endpoint.env.post.enabled=true
+management.endpoint.restart.enabled=true
+endpoints.sensitive=true
+endpoints.actuator.enabled=true
+management.security.enabled=false 
+management.endpoints.web.exposure.include=*
+
+# -Dspring.profiles.active=local
+spring-boot.run.jvmArguments=-Xmx2g -Duser.timezone=Asia/Ho_Chi_Minh
+
 #multi db
 #spring.dbProductService.driverClassName = com.mysql.jdbc.Driver
 #spring.dbProductService.url = jdbc:mysql://localhost:3306/PRODUCTSERVICE?autoreconnect = true
