fix bug init data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.profiles.active=${PROFILE}
 #config file name (default to 'application')
 spring.config.name=puzzle_ute
 # location of config file
-
+spring.config.location=${CONFIG_LOCATION}
 server.port=8080
 
 
