add verify account and fix upload

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -136,6 +136,8 @@ google.link.get.user_info_v1=https://www.googleapis.com/oauth2/v1/userinfo?acces
 
 #Support email
 support.email=caihoncuagiamnguc@gmail.com
+mail.service.pass=ENC(sKQtYYUvZ0G8HdX6ij/l5epM5dFbYq8ZTIkheLX+yn4=)
+
 app.firebase-configuration-file=firebase-service-account.json
 #prefix
 server.servlet.contextPath=/api
@@ -164,8 +166,8 @@ management.endpoints.web.exposure.include=*
 
 # -Dspring.profiles.active=local
 spring-boot.run.jvmArguments=-Xmx2g -Duser.timezone=Asia/Ho_Chi_Minh
-
-cronjob.service = 0/28 * * * * ?
+cronjob.xyz = 0 0/30 * * * ?
+cronjob.service = 0 0/20 * * * ?
 #multi db
 #spring.dbProductService.driverClassName = com.mysql.jdbc.Driver
 #spring.dbProductService.url = jdbc:mysql://localhost:3306/PRODUCTSERVICE?autoreconnect = true
