--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,10 +1,22 @@
 ### https://devcenter.heroku.com/articles/connecting-to-relational-databases-on-heroku-with-java#using-the-spring_datasource_url-in-a-spring-boot-app
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/puzzle_ute
-spring.datasource.username=root
+## MySQL
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/puzzle_ute
+#spring.datasource.username=root
+#spring.datasource.password=ENC(EonbnGeN05aybm2uSlRrjnscL5OCzSix)
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+### Postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/puzzle_ute
+spring.datasource.username=postgres
 spring.datasource.password=ENC(EonbnGeN05aybm2uSlRrjnscL5OCzSix)
 
-## MySQL
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+
 
 ### Redis
 #redis.host=localhost
