- update document api - clean web security - remove api delete employer - remove api delete candidate - add api for adding comment (user) - rename entity - rebuild search jobpost feature - fix error don't create Candidate and Employer Object when create account

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -8,7 +8,7 @@
 
 
 ### Postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/test_liquibase
+spring.datasource.url=jdbc:postgresql://localhost:5432/puzzle_ute
 spring.datasource.username=postgres
 spring.datasource.password=ENC(EonbnGeN05aybm2uSlRrjnscL5OCzSix)
 
