--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.jpa.properties.hibernate.show_sql=true
 # ===== Liquibase ======
 
 #liquibase.change-log=classpath:db/changelog/liquibase-changeLog.xm
-spring.liquibase.enabled=true
+spring.liquibase.enabled=false
 spring.liquibase.url=jdbc:postgresql://localhost:5432/puzzle_ute
 spring.liquibase.user=postgres
 spring.liquibase.password=ENC(EonbnGeN05aybm2uSlRrjnscL5OCzSix)
