--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,4 +6,8 @@ spring.datasource.password=ENC(kpDATRIS/5ptkgW+p+B2RR2mEkR4cZ36tGNcVHi34iqKK5eFE
 ### Postgres
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
