--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=local
+spring.profiles.active=${PROFILE}
 
 #config file name (default to 'application')
 spring.config.name=puzzle_ute
