--- a/pom.xml
+++ b/pom.xml
@@ -392,6 +392,12 @@
             <version>1.1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
